# multipass-mcp

./: .gitignore  .goreleaser.yaml  0001-mcp-best-practices.patch  CLAUDE.md  Dockerfile  README.md  go.mod  main.go  pyproject.toml  smithery.yaml
.github/workflows/: release.yml
assets/: banner.html
skill/multipass/: LICENSE.txt  SKILL.md
skill/multipass/evals/: evals.json
skill/multipass/reference/: cloud_init_guide.md  image_catalog.md  mcp_tools.md  multipass_cli.md  networking.md
skill/multipass/scripts/: cleanup_all.sh  health_check.sh  setup_ssh_keys.sh
skill/multipass/templates/: cloud-init-devtools.yaml  cloud-init-docker.yaml  cloud-init-k8s.yaml  cloud-init-lamp.yaml  cloud-init-python-ds.yaml
skill/multipass/workflows/: dev_environment.md  disposable_ci.md  multi_vm_cluster.md  snapshot_restore.md
src/multipass_mcp/: server.py
tools/: config.go  exec.go  files.go  helpers.go  info.go  instance.go  resources.go  snapshots.go  system.go
