[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "multipass-mcp"
version = "0.1.0"
description = "MCP server for managing Multipass virtual machines"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = ["mcp[cli]"]
keywords = ["mcp", "multipass", "virtual-machines", "ubuntu", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Systems Administration",
]

[project.urls]
Homepage = "https://github.com/rootisgod/multipass-mcp"
Repository = "https://github.com/rootisgod/multipass-mcp"
Issues = "https://github.com/rootisgod/multipass-mcp/issues"

[project.scripts]
multipass-mcp = "multipass_mcp.server:main"
